# media_compress

./: .gitignore  Cargo.toml  README.md  build.rs  dinghy.toml  justfile
src/: android_runtime.rs  error.rs  lib.rs
src/compress/image/: android.rs  apple.rs  gif.rs  mod.rs  native.rs  orientation.rs  resize.rs  static_img.rs  wasm.rs  webp_encode.rs  windows.rs
src/compress/image/android/: a_image_decoder.rs  jni_bitmap_factory.rs  mod.rs
tests/: compress_images.rs  compress_images_wasm_browser.rs  compress_quality_profiles.rs
