[package]
name = "media_compress"
version = "0.1.0"
edition = "2021"

[lib]
name = "media_compress"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
thiserror = "2"
anyhow = "1"

# webp is not needed on WASM (that platform returns PlatformNotSupported immediately).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
webp = "0.3"

[dev-dependencies]

# Compile libwebp C sources with optimizations even in debug builds.
# Without this, libwebp runs at -O0 and is ~20x slower than release.
[profile.dev.package.libwebp-sys]
opt-level = 2
