[package]
name = "media_compress"
version = "0.1.0"
edition = "2021"

[lib]
name = "media_compress"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
thiserror = "2"
anyhow = "1"

# webp is not needed on WASM — encoding is delegated to the browser Canvas API.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
webp = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

[dev-dependencies]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Compile libwebp C sources with optimizations even in debug builds.
# Without this, libwebp runs at -O0 and is ~20x slower than release.
[profile.dev.package.libwebp-sys]
opt-level = 2
